@startuml
skinparam packageStyle rectangle
skinparam shadowing false

package "Reporting" {
  interface IReporter {
    + logStep(message)
    + info(message)
    + logFail(message, error)
    + attachScreenshot(name)
    + childStep(name, runnable)
    + <T> childStep(name, supplier) : T
    + default boolean isInStep()
  }

  abstract class AbstractReporter {
    - reportType : ReportType
    + getReportType() : ReportType
    # getScreenshotBytes() : byte[]
  }

  class ExtentReporter {
    - THREAD_TO_TEST : Map<Long, ExtentTest>
    - CURRENT_STEP_NODE : ThreadLocal<ExtentTest>
    + setTest(test)
    + clearTest()
    + logStep(message)
    + info(message)
    + logFail(message, error)
    + attachScreenshot(name)
    + childStep(name, runnable)
    + <T> childStep(name, supplier) : T
  }

  interface IReportStrategyListener {
    + onStart(context)
    + onFinish(context)
    + onTestStart(result)
    + onTestSuccess(result)
    + onTestFailure(result)
    + onTestSkipped(result)
    + onConfigurationSuccess(result)
    + onConfigurationFailure(result)
    + failStep(name)
  }

  class ExtentStrategyI {
    - REPORT_DIR : String
    + onStart(context)
    + onTestStart(result)
    + onTestSuccess(result)
    + onTestFailure(result)
    + failStep(name)
    + {static} getReportDir() : String
  }

  class ReportManager {
    - reporterInstance : IReporter
    - strategyInstance : IReportStrategyListener
    + initReport()
    + getReporter() : IReporter
    + selectStrategy() : IReportStrategyListener
    + getActiveReportType() : ReportType
    + reset()
  }

  class ReportListener {
    - delegates : List<IReportStrategyListener>
    + onTestStart(result)
    + onTestSuccess(result)
    + onTestFailure(result)
    + onTestSkipped(result)
    + onConfigurationSuccess(result)
    + onConfigurationFailure(result)
    + onStart(context)
    + onFinish(context)
  }

  enum ReportType {
    EXTENT
  }

  AbstractReporter <|-- ExtentReporter
  IReporter <|-- AbstractReporter
  IReportStrategyListener <|-- ExtentStrategyI
  ReportManager --> IReporter
  ReportManager --> IReportStrategyListener
  ReportListener --> IReportStrategyListener
}

package "Configuration" {
  class Constants {
    + {static} getBaseUrl() : String
    + {static} getBrowser() : String
    + {static} getReportType() : String
    + {static} isRemoteEnabled() : boolean
    + {static} getRemoteUrl() : String
  }

  class EnvProperties {
    - props : Properties
    - browser : String
    - reportType : String
    + loadEnv(file)
    + getEnv(key) : String
    + getBrowser() : String
    + getReportType() : String
    + isRemoteEnabled() : boolean
    + isGridEnabled() : boolean
  }

  Constants --> EnvProperties : delegates
}

package "Driver" {
  interface IDriver {
    + initDriver()
    + initLocalDriver()
    + initRemoteDriver()
    + createRemoteDriver(url) : WebDriver
    + getDriver() : WebDriver
    + quitDriver()
    + getBrowserType() : DriverType
  }

  abstract class AbstractDriverManager {
    - driver : WebDriver
    - browserType : DriverType
    + initDriver()
    + initLocalDriver()
    + initRemoteDriver()
    + createRemoteDriver(url) : WebDriver
    + getDriver() : WebDriver
    + quitDriver()
    + getBrowserType() : DriverType
    # createRemoteOptions() : MutableCapabilities
  }

  class Chrome
  class Firefox
  class Edge

  AbstractDriverManager <|-- Chrome
  AbstractDriverManager <|-- Firefox
  AbstractDriverManager <|-- Edge
  IDriver <|-- AbstractDriverManager
}

@enduml

